[package]
name = "rvirt"
version = "0.1.0"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
spin = "0.5.0"
riscv-decode = "0.2.0"
arrayvec = { version = "0.4.10", default-features = false }
byteorder = { version = "1.3.1", default-features = false }
arr_macro = "0.1.2"

[profile.release]
debug = true

[[bin]]
name = "rvirt-bare-metal"
path = "src/machine.rs"
required-features = ["physical_symbol_addresses"]

[[bin]]
name = "rvirt"
path = "src/supervisor.rs"

[features]
physical_symbol_addresses = []
embed_guest_kernel = []